# pdk-experiments

./: Cargo.toml  Makefile  README.md  bench-dynamic-vs-wasm.py
abi-stable-bench/: Cargo.toml  Makefile  README.md
abi-stable-bench/common/: Cargo.toml
abi-stable-bench/common/src/: lib.rs
abi-stable-bench/plugin-sample/: Cargo.toml
abi-stable-bench/plugin-sample/src/: lib.rs
abi-stable-bench/src/: lib.rs
abi-stable-connectors/: Cargo.toml  Makefile  README.md
abi-stable-connectors/common/: Cargo.toml
abi-stable-connectors/common/src/: connectors.rs  event.rs  lib.rs  reconnect.rs  sink.rs  source.rs  util.rs  value.rs
abi-stable-connectors/plugin-metronome/: Cargo.toml
abi-stable-connectors/plugin-metronome/src/: lib.rs
abi-stable-connectors/plugin-panic/: Cargo.toml
abi-stable-connectors/plugin-panic/src/: lib.rs
abi-stable-connectors/plugin-reverse/: Cargo.toml
abi-stable-connectors/plugin-reverse/src/: lib.rs
abi-stable-connectors/src/: connectors.rs  lib.rs  main.rs  sink.rs  source.rs
abi-stable-simple/: Cargo.toml  Makefile  README.md
abi-stable-simple/common/: Cargo.toml
abi-stable-simple/common-old/: Cargo.toml
abi-stable-simple/common-old/src/: lib.rs
abi-stable-simple/common-wrong/: Cargo.toml
abi-stable-simple/common-wrong/src/: lib.rs
abi-stable-simple/common/src/: lib.rs
abi-stable-simple/plugin-panic/: Cargo.toml
abi-stable-simple/plugin-panic/src/: lib.rs
abi-stable-simple/plugin-sample/: Cargo.toml
abi-stable-simple/plugin-sample/src/: lib.rs
abi-stable-simple/plugin-versionmismatch/: Cargo.toml
abi-stable-simple/plugin-versionmismatch/src/: lib.rs
abi-stable-simple/plugin-wrongtype/: Cargo.toml
abi-stable-simple/plugin-wrongtype/src/: lib.rs
abi-stable-simple/src/: lib.rs  main.rs
benches/: dynamic.rs  simple.rs
callbacks/: Cargo.toml
callbacks/src/: main.rs
criterion-reports/abi_stable runtime/base/: benchmark.json  estimates.json  tukey.json
criterion-reports/abi_stable runtime/new/: estimates.json  raw.csv  sample.json  tukey.json
criterion-reports/abi_stable runtime/report/: index.html
criterion-reports/abi_stable setup/base/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
criterion-reports/abi_stable setup/new/: raw.csv  tukey.json
criterion-reports/abi_stable setup/report/: index.html
criterion-reports/dynamic runtime/base/: estimates.json  raw.csv  tukey.json
criterion-reports/dynamic runtime/new/: benchmark.json  raw.csv  sample.json  tukey.json
criterion-reports/dynamic runtime/report/: index.html
criterion-reports/dynamic setup/base/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
criterion-reports/dynamic setup/new/: raw.csv  sample.json
criterion-reports/dynamic setup/report/: index.html
criterion-reports/dynamic simple/base/: benchmark.json  estimates.json
criterion-reports/dynamic simple/new/: estimates.json  raw.csv  sample.json  tukey.json
criterion-reports/dynamic simple/report/: index.html
criterion-reports/native runtime/base/: benchmark.json  (+3 more)
criterion-reports/report/: index.html
dynamic-abi-stable/: Cargo.toml  Makefile  README.md
dynamic-abi-stable/common/: Cargo.toml
dynamic-abi-stable/plugin-panic/: Cargo.toml
dynamic-abi-stable/plugin-sample/: Cargo.toml
dynamic-abi-stable/src/: lib.rs  main.rs
dynamic-bench/: Cargo.toml  Makefile  README.md
dynamic-bench/common/: Cargo.toml
dynamic-bench/plugin-sample/: Cargo.toml
dynamic-bench/src/: lib.rs
dynamic-codec/: Cargo.toml  README.md
dynamic-codec/common/: Cargo.toml  cbindgen.toml
dynamic-codec/plugin-sample/: Cargo.toml
dynamic-codec/src/: lib.rs  main.rs
dynamic-connectors/: Cargo.toml  Makefile  README.md
dynamic-connectors/common/: Cargo.toml
dynamic-connectors/plugin-metronome/: Cargo.toml
dynamic-connectors/plugin-missing/: Cargo.toml
dynamic-connectors/plugin-missing/src/: lib.rs
dynamic-connectors/plugin-panic/: Cargo.toml
dynamic-connectors/plugin-sample/: Cargo.toml
dynamic-connectors/plugin-versionmismatch/: Cargo.toml
dynamic-connectors/plugin-wrongaddress/: Cargo.toml
dynamic-connectors/plugin-wrongtype/: Cargo.toml
dynamic-connectors/plugin-wrongtype/src/: lib.rs
dynamic-connectors/src/: lib.rs  main.rs
dynamic-simple/: Cargo.toml  Makefile  README.md
dynamic-simple-extern/: README.md
dynamic-simple-extern/src/: main.rs
dynamic-simple/common/: Cargo.toml
dynamic-simple/plugin-sample/: Cargo.toml
dynamic-simple/plugin-sample/src/: lib.rs
dynamic-simple/src/: lib.rs  main.rs
dynamic-simple/tremor-core/: Cargo.toml
generics/: README.md  inheritance.c  voidptr.c
generics/interface-types/: Cargo.toml
generics/sabi-trait/: Cargo.toml
native-codec/: Cargo.toml  Makefile
native-codec/common/: Cargo.toml  gen_bindings.sh
native-codec/plugin-sample/: Cargo.toml
native-codec/src/: lib.rs  main.rs
native-connectors/: Cargo.toml  README.md
native-connectors/src/: event.rs  lib.rs  main.rs  value.rs
src/: lib.rs
wasm-simple/: Cargo.toml  README.md
wasm-simple/common/: Cargo.toml
wasm-simple/plugin-sample/: Cargo.toml
wasm-simple/src/: lib.rs  main.rs
wasm-simple/tremor-core/: Cargo.toml
wasmer-simple/: Cargo.toml  Makefile  README.md
wasmer-simple/common/: Cargo.toml
wasmer-simple/plugin-sample/: Cargo.toml
wasmer-simple/src/: lib.rs  main.rs
wasmtime-simple/: Cargo.toml
wasmtime-simple/common/: Cargo.toml
wasmtime-simple/plugin-sample/: Cargo.toml
wasmtime-simple/src/: lib.rs  main.rs
(+49 files in other folders)
