[package]
name = "pdk-experiments"
version = "0.1.0"
edition = "2018"

[dependencies]
dynamic-simple = { path = "dynamic-simple", version = "0.1.0" }
wasmer-simple = { path = "wasmer-simple", version = "0.1.0" }
wasmtime-simple = { path = "wasmtime-simple", version = "0.1.0" }
abi-stable-bench = { path = "abi-stable-bench", version = "0.1.0" }
dynamic-bench = { path = "dynamic-bench", version = "0.1.0" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "dynamic"
harness = false
